--- a/admin/scss/_common.scss
+++ b/admin/scss/_common.scss
@@ -444,7 +444,7 @@ body {
             margin-top: 25px;
         }
     }
-    
+
 }
 
 .btn--submit {
@@ -502,28 +502,41 @@ body {
         justify-content: center;
         @include mx.fs(20);
         border-radius: 4px;
-        &--s{
+
+        &--s {
             @include mx.fs(16);
             max-width: 230px;
             width: 100%;
             height: 42px;
         }
-        @include mx.hover{
+
+        &--ss {
+            @include mx.fs(16);
+            max-width: 230px;
+            width: 100%;
+            height: 42px;
+        }
+
+        @include mx.hover {
             opacity: 0.6;
         }
-        &--green{
+
+        &--green {
             color: #fff;
             background: #009B63;
         }
-        &--orange{
+
+        &--orange {
             color: #fff;
             background: #FF7600;
         }
     }
-    &-border{
-        @include mx.hover{
+
+    &-border {
+        @include mx.hover {
             opacity: 0.6;
         }
+
         background: #fff;
         border: solid 2px #ccc;
         max-width: 277px;
@@ -534,15 +547,28 @@ body {
         justify-content: center;
         @include mx.fs(20);
         border-radius: 4px;
-        &--green{
+        line-height: 1;
+
+        &--ss {
+            padding: 3px 15px;
+            min-width: 90px;
+            max-width: fit-content;
+            height: auto;
+            font-weight: 600;
+            @include mx.fs(14);
+        }
+
+        &--green {
             border: solid 2px #009B63;
             color: #009B63;
         }
-        &--brown{
+
+        &--brown {
             border: solid 2px #C09D6D;
             color: #C09D6D;
         }
     }
+
     &--t01 {
         background: #fff;
         @include mx.fs(18, 18);
@@ -687,6 +713,14 @@ body {
 
         @include mx.fs(15);
     }
+}
+
+.align--right {
+    >* {
+        margin: 0 0 0 auto;
+    }
+
+    text-align: right;
 }
 
 .icon {
@@ -1140,11 +1174,11 @@ input[type="text"],
 select {
     border: solid 1px #707070;
     background: #fff;
-    padding: 10px;
+    padding: 5px 10px;
     width: 100%;
 
     &.t01 {
-        padding: 10px !important;
+        padding: 8px 10px !important;
     }
 }
 
@@ -1174,4 +1208,198 @@ label {
     display: flex;
     align-items: center;
     gap: 5px;
+}
+
+#view .contents {
+    .tbl--s01 {
+
+        th,
+        td {
+            border: none;
+        }
+
+        border: none;
+        border-collapse:separate;
+        border-spacing: 0px 3px !important;
+
+        thead {
+            th {
+                border-top: solid 2px #fff;
+                border-left: solid 2px #fff;
+                border-bottom: solid 2px #fff;
+
+                &:last-child {
+                    border-right: solid 2px #fff;
+                }
+
+                background: #E6ECF5;
+                vertical-align: center;
+                @include mx.fs(15);
+                padding: 10px 5px;
+                line-height: 1;
+                vertical-align: middle;
+                margin: 0;
+                text-align: center;
+                color: #004098;
+                font-weight: 600;
+                white-space: nowrap;
+            }
+        }
+
+        tbody {
+            tr {
+
+                &:nth-child(odd) {
+                    background: #fff;
+                }
+
+                &:nth-child(even) {
+                    background: #FFF6E6;
+                }
+
+                td {
+                    padding: 10px;
+                    @include mx.fs(15);
+                    vertical-align: middle;
+                    position: relative;
+
+                    &::after {
+                        content: "";
+                        background: #EFF7F4;
+                        position: absolute;
+                        right: 0;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        height: calc(100% - 6px);
+                        width: 2px;
+                        z-index: 2;
+                    }
+
+                    a {
+                        color: #004098;
+                    }
+                }
+            }
+        }
+    }
+}
+
+#pagination-flickr {
+    margin: 30px 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 12px;
+
+    li {
+
+        position: relative;
+
+        &.next {
+            width: 40px;
+            background: #EFF7F4;
+            margin-left: -10px;
+            z-index: 2;
+            height: 24px;
+            @include mx.hover {
+                &::before {
+                    opacity: 0.7;
+                }
+            }
+            color: #004098;
+            font-size: 1px;
+            white-space: nowrap;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            position: relative;
+            &::before {
+                content: "";
+                width: 24px;
+                height: 24px;
+                background: #004098;
+                border-radius: 50%;
+                position: absolute;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+                z-index: 2;
+            }
+            &::after {
+                content: "";
+                width: 8px;
+                height: 10px;
+                @include mx.icon_arrow2('fff');
+                position: absolute;
+                @include mx.fs(12);
+                right: 8px;
+                top: 50%;
+                transform: translateY(-50%);
+                z-index: 4;
+            }
+        }
+
+        &.previous {
+            margin-right: 10px;
+            width: 24px;
+            height: 24px;
+            background: #004098;
+            border-radius: 50%;
+            color: #004098;
+            font-size: 1px;
+            white-space: nowrap;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+
+            @include mx.hover {
+                opacity: 0.7;
+            }
+
+            &::after {
+                content: "";
+                width: 8px;
+                height: 10px;
+                @include mx.icon_arrow2('fff');
+                color: #fff;
+                position: absolute;
+                @include mx.fs(12);
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%) scale(-1);
+                line-height: 1;
+            }
+        }
+
+        &:not(.next):not(.previous) {
+            position: relative;
+
+            &::after {
+                content: "";
+                position: absolute;
+                right: -6px;
+                top: 50%;
+                transform: translateY(-50%);
+                height: 3px;
+                width: 3px;
+                border-radius: 50%;
+                background: #004098;
+            }
+        }
+
+        a {
+            color: #004098!important;
+            padding: 0;
+            margin: 0;
+            width: fit-content;
+
+            @include mx.hover {
+                border: none !important;
+                text-decoration: underline;
+            }
+
+            border: none !important;
+        }
+    }
 }
