--- a/admin/scss/_footer.scss
+++ b/admin/scss/_footer.scss
@@ -10,6 +10,9 @@
 		height: 100%;
 		display: block;
 		width: 250px;
+		@include mx.max_w(1280){
+			width: 200px!important;
+		}
 		background: #004098;
 		display: flex;
 		align-items: flex-end;
