--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -13,7 +13,9 @@
 		grid-template-columns: 250px 1fr;
 		grid-template-rows: auto;
 		margin-top: 140px;
-
+		@include mx.max_w(1280){
+			grid-template-columns: 200px 1fr;
+		}
 		&.hide-navi {
 			#view {
 				grid-row: 1;
@@ -34,7 +36,7 @@
 				grid-template-rows: auto 1fr;
 
 				&.hide-right {
-					.postinfo {
+					.postinfo,.contents {
 						grid-column: 1 / span 2;
 					}
 				}
@@ -63,19 +65,24 @@
 					color: #004098;
 
 				}
-
-				.postinfo {
+				
+				.postinfo,.contents {
 					margin: 0;
 					grid-row: 2;
 					grid-column: 1;
 					float: none;
 					width: 100%;
 					padding: 0 40px 40px;
+					@include mx.max_w(1080){
+						padding: 0 20px 40px;
+					}
 					span {
 						padding: 0;
 					}
 				}
-
+				.contents{
+					grid-column: 1 / span 2;
+				}
 				.right {
 					grid-row: 1 / span 2;
 					grid-column: 2;
@@ -167,7 +174,11 @@
 			background: #fff;
 			padding: 20px;
 		}
-
+		.content{
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+		}
 		&--add-blog {
 			display: flex;
 			flex-direction: column;
@@ -408,6 +419,68 @@
 
 						>div {}
 					}
+				}
+			}
+		}
+		&--list-blog{
+			.align--right{
+				margin-bottom: 10px;
+			}
+			.tbl{
+				display: block;
+				border: none;
+				margin: 0;
+				margin: 25px 0 10px;
+				*{
+					display: block;
+				}
+				tr{
+						display: flex;
+						align-items: center;
+						gap:5%;
+						flex-wrap: wrap;
+						td{
+							padding: 0;
+							width: fit-content;
+							display: flex;
+							align-items: center;
+							
+							&:first-child{
+								width: 28%;
+								min-width: 350px;
+								p{
+									flex: 1; 
+									width: 100%;
+									gap:20px;
+								}
+								input{
+									flex: 1; 
+									max-width: 300px;
+									width: 100%;
+								}
+							}
+							&:nth-child(2){
+								gap:30px;
+								input{
+									transform: scale(1.3);
+								}
+								
+							}
+							.btn-square{
+								width: 100px;
+								height: 38px;
+								@include mx.fs(20);
+							}
+							label{
+								gap:10px;
+								display: flex;
+								align-items: center;
+							}
+							p{
+								display: flex;
+								align-items: center;
+							}
+						}
 				}
 			}
 		}
