--- a/admin/scss/_common.scss
+++ b/admin/scss/_common.scss
@@ -1258,6 +1258,9 @@ label {
                 }
 
                 td {
+                    &.align--center{
+                        text-align: center;
+                    }
                     padding: 10px;
                     @include mx.fs(15);
                     vertical-align: middle;
