--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -169,15 +169,10 @@
 	}
 
 	.content {
-
+		
 		&--box {
 			background: #fff;
 			padding: 20px;
-		}
-		.content{
-			display: flex;
-			flex-direction: column;
-			gap: 20px;
 		}
 		&--add-blog {
 			display: flex;
@@ -424,13 +419,12 @@
 		}
 		&--list-blog{
 			.align--right{
-				margin-bottom: 10px;
+				margin: -15px 0;
 			}
 			.tbl{
 				display: block;
 				border: none;
 				margin: 0;
-				margin: 25px 0 10px;
 				*{
 					display: block;
 				}
