--- a/admin/css/style_02.css
+++ b/admin/css/style_02.css
@@ -212,7 +212,7 @@ body {
   color: #505050;
   border: #ccc solid 1px;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   .content--colorbox dl dd input {
     font-size: 1.125rem;
   }
@@ -486,7 +486,7 @@ body {
   color: #004098;
   line-height: 1.5;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   .content--colorbox__list li > div > *:nth-child(1) {
     font-size: 1rem;
   }
@@ -504,7 +504,7 @@ body {
   background: rgb(255, 255, 255);
   font-size: 1.25rem;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   .content--colorbox__list li > div > *:nth-child(2) {
     font-size: 1rem;
   }
@@ -514,7 +514,7 @@ body {
     min-height: 50px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   .content--colorbox__list li > div > *:nth-child(2) {
     font-size: 1rem;
   }
@@ -553,7 +553,7 @@ body {
     margin: 0 -15px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   .content--colorbox__list li > div > *:nth-child(2) input[type=text],
   .content--colorbox__list li > div > *:nth-child(2) input[type=email],
   .content--colorbox__list li > div > *:nth-child(2) textarea {
@@ -639,7 +639,7 @@ body {
   font-weight: 300;
   color: #D33939;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   .content--colorbox__list li span {
     font-size: 0.75rem;
   }
@@ -681,6 +681,7 @@ body {
   -ms-grid-rows: auto;
   grid-template-rows: auto;
   gap: 15px 0px;
+  margin: 10px 0 0;
 }
 .content--resume > *:nth-child(1) {
   -ms-grid-row: 1;
@@ -697,7 +698,7 @@ body {
   font-size: 1.25rem;
   font-weight: 500;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   .content--resume dt,
   .content--resume dd {
     font-size: 1.125rem;
@@ -772,6 +773,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  gap: 5px;
   font-size: 1.25rem;
   border-radius: 4px;
 }
@@ -783,8 +785,10 @@ body {
 }
 .btn-square--ss {
   font-size: 1rem;
-  max-width: 230px;
-  width: 100%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0 20px;
   height: 42px;
 }
 @media (min-width: 769px) {
@@ -796,6 +800,10 @@ body {
   .btn-square:hover {
     opacity: 0.6;
   }
+}
+.btn-square--gray {
+  color: #fff;
+  background: #888888;
 }
 .btn-square--green {
   color: #fff;
@@ -883,7 +891,7 @@ body {
   gap: 12px;
   width: 100%;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   .btn--t01 {
     font-size: 1.125rem;
   }
@@ -1666,6 +1674,9 @@ label {
 .align--center * {
   margin: auto;
 }
+.align--right * {
+  margin: auto 0 auto auto;
+}
 
 .msginfo {
   background: #D4EBE3 !important;
@@ -1698,6 +1709,19 @@ label {
   margin-top: 30px;
 }
 
+.tbl-scroll {
+  overflow-x: auto;
+}
+.tbl-scroll .tbl--s01 {
+  table-layout: auto;
+  width: 100%;
+  position: relative;
+}
+.tbl-scroll .tbl--s01 th, .tbl-scroll .tbl--s01 td {
+  width: calc((100vw - 350px) / 3);
+  min-width: 200px;
+}
+
 .site-header {
   width: 100%;
   height: 100px;
@@ -1705,7 +1729,7 @@ label {
   left: 0;
   top: 0;
   background: #fff;
-  z-index: 100;
+  z-index: 300;
   border-bottom: solid 2px #009B63;
 }
 .site-header__top {
@@ -2014,6 +2038,7 @@ label {
       -ms-flex-align: end;
           align-items: flex-end;
   font-size: 0.6875rem;
+  font-weight: 500;
   color: #fff;
   padding: 10px;
   text-align: left;
@@ -2021,6 +2046,11 @@ label {
 @media (max-width: 1280px) {
   #Copyright p {
     width: 200px !important;
+  }
+}
+@media (max-width: 1280px) {
+  #Copyright p {
+    font-size: 0.625rem;
   }
 }
 
@@ -2078,7 +2108,7 @@ label {
   font-weight: 500;
   letter-spacing: 0.037em;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   #admin_login .sec--account__header h1 {
     font-size: 1.25rem;
   }
@@ -2099,7 +2129,7 @@ label {
   font-size: 1.25rem;
   color: #004098;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   #admin_login .sec--account__header h1 figcaption {
     font-size: 1.25rem;
   }
@@ -2120,7 +2150,7 @@ label {
     margin: 20px 0 0;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   #admin_login .sec--account__header p {
     font-size: 1rem;
   }
@@ -2165,7 +2195,7 @@ label {
   font-weight: 700;
   line-height: 1.5;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   #admin_login .sec--account__complete h2 {
     font-size: 1.75rem;
   }
@@ -2179,7 +2209,7 @@ label {
   line-height: 1.5;
   font-size: 1.1875rem;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   #admin_login .sec--account__complete p {
     font-size: 1rem;
   }
@@ -2200,7 +2230,7 @@ label {
   font-size: 0.9375rem;
   line-height: 1.4;
 }
-@media (max-width: 768px) {
+@media (max-width: 1280px) {
   #admin_login .sec--account__error {
     font-size: 0.75rem;
   }
@@ -2257,6 +2287,7 @@ label {
 
 #wrap {
   width: 100%;
+  overflow: clip;
 }
 
 #page {
@@ -2304,8 +2335,8 @@ label {
   display: grid;
   -ms-grid-columns: 1fr 250px;
   grid-template-columns: 1fr 250px;
-  -ms-grid-rows: auto 1fr;
-  grid-template-rows: auto 1fr;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
 }
 #page .site-main #view .site-contents > *:nth-child(1) {
   -ms-grid-row: 1;
@@ -2313,14 +2344,6 @@ label {
 }
 #page .site-main #view .site-contents > *:nth-child(2) {
   -ms-grid-row: 1;
-  -ms-grid-column: 2;
-}
-#page .site-main #view .site-contents > *:nth-child(3) {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-}
-#page .site-main #view .site-contents > *:nth-child(4) {
-  -ms-grid-row: 2;
   -ms-grid-column: 2;
 }
 #page .site-main #view .site-contents.hide-right .postinfo, #page .site-main #view .site-contents.hide-right .contents {
@@ -2334,10 +2357,10 @@ label {
   -ms-grid-row: 1;
   grid-row: 1;
   background: none;
-  padding: 0px 40px 20px;
+  padding: 0px 0px 0px 40px;
   border-bottom: none;
   color: #009B63;
-  font-size: 1.75rem;
+  font-size: 1.625rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2345,6 +2368,12 @@ label {
       -ms-flex-align: center;
           align-items: center;
   line-height: 1.5;
+  position: fixed;
+  width: 100%;
+  top: 100px;
+  background: #EFF7F4;
+  z-index: 100;
+  height: 60px;
 }
 #page .site-main #view .site-contents h2 .icon {
   -ms-flex-negative: 0;
@@ -2363,11 +2392,11 @@ label {
   grid-column: 1;
   float: none;
   width: 100%;
-  padding: 0 40px 40px;
+  padding: 0 40px 80px;
 }
 @media (max-width: 1080px) {
   #page .site-main #view .site-contents .postinfo, #page .site-main #view .site-contents .contents {
-    padding: 0 20px 40px;
+    padding: 0 20px 80px;
   }
 }
 #page .site-main #view .site-contents .postinfo span, #page .site-main #view .site-contents .contents span {
@@ -2377,6 +2406,9 @@ label {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/span 2;
+}
+#page .site-main #view .site-contents .contents {
+  padding-top: 30px;
 }
 #page .site-main #view .site-contents .right {
   -ms-grid-row: 1;
@@ -2389,6 +2421,7 @@ label {
   background: #D4EBE3;
   color: #888888;
   position: relative;
+  z-index: 200;
 }
 #page .site-main #view .site-contents .right .genre1 {
   background: #D4EBE3;
@@ -2409,6 +2442,7 @@ label {
 }
 #page .site-main #view .site-contents .right .toggle-genre1 {
   width: 250px;
+  height: 50px;
   right: 0;
   top: 100px;
   z-index: 10;
@@ -2877,6 +2911,7 @@ label {
 }
 #page .site-main .btn-menu.close {
   width: 40px;
+  height: 40px;
 }
 #page .site-main .btn-menu.close .text {
   display: none;
@@ -2898,6 +2933,7 @@ label {
   float: none;
   background: #004098;
   position: relative;
+  z-index: 120;
 }
 #page .site-main #navi.hide {
   margin-left: -250px;
