--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -2,12 +2,10 @@
 
 #wrap {
 	width: 100%;
-
+	overflow: clip;
 }
-
 #page {
 	overflow: clip;
-
 	.site-main {
 		display: grid;
 		grid-template-columns: 250px 1fr;
@@ -33,7 +31,7 @@
 				margin-top: 0px;
 				display: grid;
 				grid-template-columns: 1fr 250px;
-				grid-template-rows: auto 1fr;
+				grid-template-rows: auto;
 
 				&.hide-right {
 					.postinfo,.contents {
@@ -45,14 +43,19 @@
 					grid-column: 1;
 					grid-row: 1;
 					background: none;
-					padding: 0px 40px 20px;
+					padding: 0px 0px 0px 40px;
 					border-bottom: none;
 					color: #009B63;
-					@include mx.fs(28);
+					@include mx.fs(26);
 					display: flex;
 					align-items: center;
 					line-height: 1.5;
-
+					position: fixed;
+					width: 100%;
+					top:100px;
+					background: #EFF7F4;
+					z-index: 100;
+					height: 60px;
 					.icon {
 						flex-shrink: 0;
 						font-size: 1em;
@@ -72,9 +75,9 @@
 					grid-column: 1;
 					float: none;
 					width: 100%;
-					padding: 0 40px 40px;
+					padding: 0 40px 80px;
 					@include mx.max_w(1080){
-						padding: 0 20px 40px;
+						padding: 0 20px 80px;
 					}
 					span {
 						padding: 0;
@@ -83,6 +86,9 @@
 				.contents{
 					grid-column: 1 / span 2;
 				}
+				.contents{
+					padding-top: 30px;
+				}	
 				.right {
 					grid-row: 1 / span 2;
 					grid-column: 2;
@@ -91,6 +97,7 @@
 					background: #D4EBE3;
 					color: #888888;
 					position: relative;
+					z-index: 200;
 					.genre1{
 						background: #D4EBE3;
 						#blog{
@@ -110,6 +117,7 @@
 
 					.toggle-genre1 {
 						width: 250px;
+						height: 50px;
 						right: 0;
 						top: 100px;
 						z-index: 10;
@@ -169,7 +177,6 @@
 	}
 
 	.content {
-		
 		&--box {
 			background: #fff;
 			padding: 20px;
