--- a/admin/scss/_sidenav.scss
+++ b/admin/scss/_sidenav.scss
@@ -25,6 +25,7 @@
 			}
 			&.close{
 				width: 40px;
+				height: 40px;
 				.text{
 					display: none;
 				}
@@ -43,6 +44,7 @@
 			float: none;
 			background: #004098;
 			position: relative;
+			z-index: 120;
 			&.hide{
 				margin-left: -250px;
 				height: 50px;
