--- a/admin/scss/_sidenav.scss
+++ b/admin/scss/_sidenav.scss
@@ -115,7 +115,7 @@
 							}
 							&.current {
 								color: #009B63;
-
+								background: #EFF7F4;
 								&::after {
 									content: "";
 									width: 5px;
